DOC-2350: Fix broken refs

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -5,17 +5,17 @@
 ** xref:use-tinymce-inline.adoc[Inline editing mode]
 ** xref:use-tinymce-distraction-free.adoc[Distraction-free editing mode]
 ** xref:multiple-editors.adoc[Multiple editors in a page]
-** xref:advanced-install.adoc[Options for installing TinyMCE]
+** xref:installation.adoc[Options for installing TinyMCE]
 ** xref:upgrading.adoc[Upgrading TinyMCE]
 ** xref:work-with-plugins.adoc[Using plugins to extend TinyMCE]
 ** xref:customize-ui.adoc[Customizing the UI]
-** xref:boilerplate-content-css.adoc[Boilerplate content CSS]
+** xref:editor-content-css.adoc[Boilerplate content CSS]
 ** xref:upload-images.adoc[Image uploads]
 ** xref:spell-checking.adoc[Spell checking]
 ** xref:filter-content.adoc[Content filtering]
 ** xref:localize-your-language.adoc[Localization]
 ** xref:attribution-requirements.adoc[Logo attribution]
-** xref:general-configuration-guide-system-requirements.adoc[Supported Versions and Platforms]
+** xref:system-requirements.adoc[Supported Versions and Platforms]
 ** xref:get-support.adoc[Support & FAQ]
 * Cloud deployment guide
 ** xref:editor-and-features.adoc[Cloud deployment of editor & plugins]
@@ -27,27 +27,27 @@
 ** xref:basic-example.adoc[Basic example]
 ** xref:full-featured.adoc[Full featured]
 ** xref:demo-casechange.adoc[Case Change]
-** xref:comments-2.adoc[Comments]
+** xref:comments-demo.adoc[Comments]
 ** xref:demo-checklist.adoc[Checklist]
 ** xref:demo-pageembed.adoc[Page Embed]
 ** xref:demo-permanentpen.adoc[Permanent Pen]
 ** xref:demo-formatpainter.adoc[Format Painter]
 ** xref:demo-tinydrive.adoc[Tiny Drive]
-** xref:editor-dfree.adoc[Distraction-free editor]
+** xref:distraction-free-demo.adoc[Distraction-free editor]
 ** xref:inline.adoc[Inline editor]
-** xref:classic.adoc[Classic editor mode]
+** xref:classic-demo.adoc[Classic editor mode]
 ** xref:image-tools.adoc[Image tools]
 ** xref:format-custom.adoc[Custom formats]
 ** xref:format-html5.adoc[HTML5 formats]
 ** xref:url-conversion.adoc[URL conversion]
 ** xref:valid-elements.adoc[Valid elements]
-** xref:custom-toolbar-button.adoc[Custom toolbar button]
-** xref:custom-toolbar-menu-button.adoc[Custom toolbar menu button]
-** xref:custom-toolbar-split-button.adoc[Custom toolbar split button]
-** xref:custom-menu-item.adoc[Custom menu item]
+** xref:custom-basic-toolbar-button.adoc[Custom toolbar button]
+** xref:custom-menu-toolbar-button.adoc[Custom toolbar menu button]
+** xref:custom-split-toolbar-button.adoc[Custom toolbar split button]
+** xref:custom-basic-menu-items.adoc[Custom menu item]
 ** xref:file-picker.adoc[Basic local file picker]
 ** xref:local-upload.adoc[Local file upload]
-* xref:mobile.adoc[Mobile]
+* xref:tinymce-for-mobile.adoc[Mobile]
 * Configuration reference
 ** xref:integration-and-setup.adoc[Integration options]
 ** xref:editor-appearance.adoc[User interface options]
@@ -56,37 +56,37 @@
 ** xref:content-formatting.adoc[Content formatting options]
 ** xref:spelling.adoc[Spelling options]
 ** xref:file-image-upload.adoc[Image & file options]
-** xref:configure-accessibility.adoc[Accessibility options]
-** xref:configure-localization.adoc[Localization options]
+** xref:accessibility.adoc[Accessibility options]
+** xref:content-localization.adoc[Localization options]
 ** xref:url-handling.adoc[URL handling options]
-** xref:advanced-editing-behavior.adoc[Advanced editing options]
+** xref:content-behavior-options.adoc[Advanced editing options]
 ** xref:contributing-to-open-source.adoc[Contribute to TinyMCE]
 ** xref:contributing-docs.adoc[Contribute to documentation]
 * Plugins
 ** Premium plugins
-*** xref:premium-a11ychecker.adoc[Accessibility Checker]
-*** xref:premium-advcode.adoc[Advanced Code Editor]
-*** xref:premium-advtable.adoc[Advanced Tables]
-*** xref:premium-casechange.adoc[Case Change]
-*** xref:premium-checklist.adoc[Checklist]
+*** xref:a11ychecker.adoc[Accessibility Checker]
+*** xref:advcode.adoc[Advanced Code Editor]
+*** xref:advtable.adoc[Advanced Tables]
+*** xref:casechange.adoc[Case Change]
+*** xref:checklist.adoc[Checklist]
 *** Comments
 **** xref:introduction_to_tiny_comments.adoc[Introduction]
-**** xref:comments_using_comments.adoc[Using Comments]
-**** xref:comments_callback_mode.adoc[Callback mode]
-**** xref:comments_embedded_mode.adoc[Embedded mode]
-**** xref:comments_toolbars_menus.adoc[Toolbar buttons and menu items]
-**** xref:comments_commands_events_apis.adoc[Commands]
-*** xref:premium-mediaembed.adoc[Enhanced Media Embed]
-*** xref:premium-export.adoc[Export]
-*** xref:premium-formatpainter.adoc[Format Painter]
-*** xref:premium-linkchecker.adoc[Link Checker]
-*** xref:premium-mentions.adoc[Mentions]
-*** xref:premium-moxiemanager.adoc[MoxieManager]
-*** xref:premium-pageembed.adoc[Page Embed]
-*** xref:premium-permanentpen.adoc[Permanent Pen]
-*** xref:premium-powerpaste.adoc[PowerPaste]
-*** xref:premium-tinymcespellchecker.adoc[Spell Checker Pro]
-*** xref:premium-tinydrive.adoc[Tiny Drive]
+**** xref:comments-using-comments.adoc[Using Comments]
+**** xref:comments-callback-mode.adoc[Callback mode]
+**** xref:comments-embedded-mode.adoc[Embedded mode]
+**** xref:comments-toolbars-menus.adoc[Toolbar buttons and menu items]
+**** xref:comments-commands-events-apis.adoc[Commands]
+*** xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
+*** xref:export.adoc[Export]
+*** xref:formatpainter.adoc[Format Painter]
+*** xref:linkchecker.adoc[Link Checker]
+*** xref:mentions.adoc[Mentions]
+*** xref:moxiemanager.adoc[MoxieManager]
+*** xref:pageembed.adoc[Page Embed]
+*** xref:permanentpen.adoc[Permanent Pen]
+*** xref:introduction-to-powerpaste.adoc[PowerPaste]
+*** xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro]
+*** xref:tinydrive-plugin.adoc[Tiny Drive]
 *** xref:rtc-plugin.adoc[Real-time Collaboration]
 ** Open source plugins
 *** xref:advlist.adoc[Advanced List]
@@ -105,7 +105,7 @@
 *** xref:help.adoc[Help]
 *** xref:hr.adoc[Horizontal Rule]
 *** xref:image.adoc[Image]
-*** xref:imagetools.adoc[Image Tools]
+*** xref:editimage.adoc[Image Tools]
 *** xref:importcss.adoc[Import CSS]
 *** xref:insertdatetime.adoc[Insert Date/Time]
 *** xref:legacyoutput.adoc[Legacy Output]
@@ -126,7 +126,7 @@
 *** xref:table.adoc[Table]
 *** xref:template.adoc[Template]
 *** xref:textpattern.adoc[Text Pattern]
-*** xref:toc.adoc[Table of Contents]
+*** xref:tableofcontents.adoc[Table of Contents]
 *** xref:visualblocks.adoc[Visual Blocks]
 *** xref:visualchars.adoc[Visual Characters]
 *** xref:wordcount.adoc[Word Count]
@@ -135,18 +135,18 @@
 ** xref:contextform.adoc[Context forms]
 ** xref:contextmenu.adoc[Context menu]
 ** xref:contexttoolbar.adoc[Context toolbar]
-** xref:menuitems.adoc[Custom menu items]
+** xref:creating-custom-menu-items.adoc[Custom menu items]
 ** xref:customsidebar.adoc[Custom sidebar]
 ** xref:dialog.adoc[Dialog]
-** xref:dialogcomponents.adoc[Dialog components]
+** xref:dialog-components.adoc[Dialog components]
 ** xref:urldialog.adoc[URL dialog]
-** xref:toolbarbuttons.adoc[Toolbar buttons]
+** xref:custom-toolbarbuttons.adoc[Toolbar buttons]
 ** xref:typesoftoolbarbuttons.adoc[Types of toolbar buttons]
 * Premium features
-** xref:tiny-comments.adoc[Commenting & collaboration]
+** xref:introduction-to-tiny-comments.adoc[Commenting & collaboration]
 ** xref:enterprise-tinydrive.adoc[Cloud-based file management]
 ** xref:enterprise-moxiemanager.adoc[Self-hosted file management]
-** xref:premium-skins-and-icon-packs.adoc[Tiny Skins and Icon Packs]
+** xref:enhanced-skins-and-icon-packs.adoc[Tiny Skins and Icon Packs]
 *** xref:bootstrap-demo.adoc[Bootstrap Demo]
 *** xref:material-classic-demo.adoc[Material Classic Demo]
 *** xref:material-outline-demo.adoc[Material Outline Demo]
@@ -164,21 +164,21 @@
 ** xref:enterprise-checklist.adoc[Checklist]
 ** xref:paste-from-word.adoc[Paste from Word]
 ** xref:check-spelling.adoc[Spell checking as-you-type]
-*** xref:custom.adoc[Adding custom dictionaries]
+*** xref:custom-dictionaries-for-tiny-spellchecker.adoc[Adding custom dictionaries]
 ** xref:enterprise-casechange.adoc[Case Change]
 ** xref:check-links.adoc[Hyperlink checking]
-** xref:embed-media.adoc[Media embedding]
+** xref:introduction-to-mediaembed.adoc[Media embedding]
 *** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
 *** xref:mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 ** xref:enterprise-accessibility.adoc[Accessibility checking]
 ** xref:enterprise-mentions.adoc[Mentions]
-** xref:server.adoc[Server-side component installation]
-*** xref:server-configure.adoc[Configure server-side components]
+** xref:introduction-to-premium-selfhosted-services.adoc[Server-side component installation]
+*** xref:configure-required-services.adoc[Configure server-side components]
 *** xref:self-hosting-hunspell.adoc[Using Hunspell dictionaries]
-*** xref:dockerservices.adoc[Containerized service deployments]
-*** xref:troubleshoot.adoc[Troubleshoot server-side components]
+*** xref:bundle-intro-setup.adoc[Containerized service deployments]
+*** xref:troubleshoot-server.adoc[Troubleshoot server-side components]
 ** xref:enterprise-advcode.adoc[Advanced source code editing]
-** xref:advanced-tables.adoc[Advanced Tables]
+** xref:advtable.adoc[Advanced Tables]
 ** xref:enterprise-export.adoc[Export]
 ** xref:support.adoc[Professional support]
 ** xref:enterprise-system-requirements.adoc[Supported Premium Versions and Platforms]
@@ -186,18 +186,18 @@
 ** xref:tinydrive-introduction.adoc[Introduction]
 ** xref:tinydrive-getting-started.adoc[Getting started]
 ** xref:tinydrive-jwt-authentication.adoc[JWT Authentication]
-** xref:tinydrive-configuration.adoc[Configuration options]
+** xref:tinydrive-setup-options.adoc[Configuration options]
 ** Starter projects
-*** xref:dotnet.adoc[.Net Core]
-*** xref:java.adoc[Java Spring]
-*** xref:nodejs.adoc[Node.js]
-*** xref:php.adoc[PHP]
+*** xref:dotnet-projects.adoc[.Net Core]
+*** xref:tinydrive-java.adoc[Java Spring]
+*** xref:tinydrive-nodejs.adoc[Node.js]
+*** xref:tinydrive-php.adoc[PHP]
 ** Integrations
 *** xref:tinydrive-dropbox-integration.adoc[Dropbox]
-*** xref:tinydrive-googledrive-integration.adoc[Google Drive]
+*** xref:tinydrive-dropbox-and-google-drive.adoc[Google Drive]
 ** API
 *** xref:standalone.adoc[Standalone API]
-*** xref:tinydrive-api-plugin.adoc[Plugin API]
+*** xref:introduction-to-tinydrive-apis.adoc[Plugin API]
 ** xref:tinydrive-changelog.adoc[Changelog]
 ** xref:get-help.adoc[Get help]
 * Real-time Collaboration (RTC)
@@ -214,7 +214,7 @@
 ** xref:how-the-rtc-plugin-encrypts-content.adoc[How RTC encrypts content]
 ** xref:rtc-troubleshooting.adoc[RTC Troubleshooting]
 * Advanced topics
-** xref:advanced-accessibility.adoc[Accessibility]
+** xref:tinymce-and-screenreaders.adoc[Accessibility]
 ** xref:security.adoc[Security]
 ** xref:creating-a-skin.adoc[Create a skin]
 ** xref:creating-an-icon-pack.adoc[Create an icon pack]
@@ -228,42 +228,42 @@
 ** xref:editor-command-identifiers.adoc[Available Commands]
 ** xref:editor-icon-identifiers.adoc[Available Icons]
 ** xref:editor-context-menu-identifiers.adoc[Available Context Menu Items]
-** xref:advanced-events.adoc[Available Events]
+** xref:events.adoc[Available Events]
 ** xref:keyboard-shortcuts.adoc[Keyboard shortcuts]
 ** Bundling TinyMCE
 *** xref:introduction_to_bundling_tinymce.adoc[Introduction]
 *** Webpack
-**** xref:webpack_es6_npm.adoc[ES6 and npm]
-**** xref:webpack_cjs_npm.adoc[CommonJS and npm]
-**** xref:webpack_es6_download.adoc[ES6 and a .zip archive]
-**** xref:webpack_cjs_download.adoc[CommonJS and a .zip archive]
+**** xref:webpack-cjs-npm.adoc[ES6 and npm]
+**** xref:webpack-cjs-npm.adoc[CommonJS and npm]
+**** xref:webpack-cjs-npm.adoc[ES6 and a .zip archive]
+**** xref:webpack-cjs-download.adoc[CommonJS and a .zip archive]
 *** Rollup.js
-**** xref:rollup_es6_npm.adoc[ES6 and npm]
-**** xref:rollup_es6_download.adoc[ES6 and a .zip archive]
+**** xref:rollup-es6-npm.adoc[ES6 and npm]
+**** xref:rollup-es6-download.adoc[ES6 and a .zip archive]
 *** Browserify
-**** xref:browserify_cjs_npm.adoc[CommonJS and npm]
-**** xref:browserify_cjs_download.adoc[CommonJS and a .zip archive]
+**** xref:browserify-cjs-npm.adoc[CommonJS and npm]
+**** xref:browserify-cjs-download.adoc[CommonJS and a .zip archive]
 *** Reference
-**** xref:plugins-module-loader.adoc[Plugins]
+**** xref:bundling-plugins.adoc[Plugins]
 **** xref:content-css.adoc[Content CSS]
-**** xref:skins.adoc[Skins]
-**** xref:icons.adoc[Icons]
-**** xref:reference-localization.adoc[UI localizations]
-**** xref:themes.adoc[Themes]
+**** xref:bundling-skins.adoc[Skins]
+**** xref:bundling-icons.adoc[Icons]
+**** xref:bundling-localization.adoc[UI localizations]
+**** xref:bundling-themes.adoc[Themes]
 ** xref:generate-rsa-key-pairs.adoc[Generate public key pairs]
 * Integrations
 ** xref:angularjs.adoc[AngularJS]
-** xref:angular.adoc[Angular 5+]
-** xref:blazor.adoc[Blazor]
+** xref:angular-pm.adoc[Angular 5+]
+** xref:blazor-pm.adoc[Blazor]
 ** xref:bootstrap.adoc[Bootstrap]
 ** xref:django.adoc[Django]
-** xref:jquery.adoc[jQuery]
+** xref:jquery-pm.adoc[jQuery]
 ** Laravel
 *** xref:laravel-introduction.adoc[Introduction]
 *** xref:laravel-tiny-cloud.adoc[Using Tiny Cloud]
 *** xref:laravel-composer-install.adoc[Using the Composer package]
 *** xref:laravel-zip-install.adoc[Using a .zip package]
-** xref:expressjs.adoc[Node.js + Express]
+** xref:expressjs-pm.adoc[Node.js + Express]
 ** xref:rails.adoc[Rails]
 ** xref:react.adoc[React]
 ** xref:svelte.adoc[Svelte]
