--- a/modules/ROOT/pages/check-spelling.adoc
+++ b/modules/ROOT/pages/check-spelling.adoc
@@ -18,5 +18,5 @@ Additional dictionaries can be added to Spell Checker Pro to supplement the defa
 
 :pluginname: Spell Checker Pro
 :pluginminimumplan: tierthree
-:plugindocspage: tinymcespellchecker.adoc
+:plugindocspage: introduction-to-tiny-spellchecker.adoc
 include::partial$misc/purchase-premium-plugins.adoc[]
