--- a/modules/ROOT/pages/paste-from-word.adoc
+++ b/modules/ROOT/pages/paste-from-word.adoc
@@ -41,5 +41,5 @@ liveDemo::paste-from-word[]
 
 :pluginname: PowerPaste
 :pluginminimumplan: tiertwo
-:plugindocspage: powerpaste.adoc
+:plugindocspage: introduction-to-powerpaste.adoc
 include::partial$misc/purchase-premium-plugins.adoc[]
