--- a/modules/ROOT/partials/configuration/help_tabs.adoc
+++ b/modules/ROOT/partials/configuration/help_tabs.adoc
@@ -1,7 +1,7 @@
 [[help_tabs]]
 === `help_tabs`
 
-This option allows you to specify which tabs the Help dialog should show, and in what order. The default {productname} tabs are called `shortcuts`, `keyboardnav`, `plugins` and `versions`. These tabs can be overwritten by providing a new xref:dialogcomponents.adoc#tabpanel[tab panel] specification with the same `name`, and new tabs can be added by registering a tab panel with a new `name`. New tabs can be registered in the `help_tabs` configuration or at initialization or runtime using the xref:help.adoc#api[`addTab` API method].
+This option allows you to specify which tabs the Help dialog should show, and in what order. The default {productname} tabs are called `shortcuts`, `keyboardnav`, `plugins` and `versions`. These tabs can be overwritten by providing a new xref:dialog-components.adoc#tabpanel[tab panel] specification with the same `name`, and new tabs can be added by registering a tab panel with a new `name`. New tabs can be registered in the `help_tabs` configuration or at initialization or runtime using the xref:help.adoc#api[`addTab` API method].
 
 If `help_tabs` is configured, only tabs named in `help_tabs` will be displayed. Any tabs defined using `addTab` that are not named in `help_tabs` will be ignored.
 
