--- a/modules/ROOT/partials/configuration/spellchecker_rpc_url.adoc
+++ b/modules/ROOT/partials/configuration/spellchecker_rpc_url.adoc
@@ -1,7 +1,7 @@
 [[spellchecker_rpc_url]]
 === `spellchecker_rpc_url`
 
-This option specifies the URL of the server-side `ephox-spelling` service. For instructions on how to set up a Spell Checker Pro server-side component, see: the xref:server.adoc[server-side component installation guide].
+This option specifies the URL of the server-side `ephox-spelling` service. For instructions on how to set up a Spell Checker Pro server-side component, see: the xref:introduction-to-premium-selfhosted-services.adoc[server-side component installation guide].
 
 NOTE: `spellchecker_rpc_url` is *not* required when enabling this plugin via xref:editor-and-features.adoc[{cloudname}]
 
