--- a/modules/ROOT/partials/configuration/toc_class.adoc
+++ b/modules/ROOT/partials/configuration/toc_class.adoc
@@ -1,7 +1,7 @@
 [[toc_class]]
 === `toc_class`
 
-With `toc_class` you can change the class name that gets assigned to the wrapper `div`. Please note that you will have to alter xref:boilerplate-content-css.adoc[Boilerplate Content CSS] accordingly.
+With `toc_class` you can change the class name that gets assigned to the wrapper `div`. Please note that you will have to alter xref:editor-content-css.adoc[Boilerplate Content CSS] accordingly.
 
 *Type:* `String`
 
