--- a/modules/ROOT/partials/install/custom.adoc
+++ b/modules/ROOT/partials/install/custom.adoc
@@ -1,6 +1,6 @@
 {productname} tries to be as flexible to your project's needs as possible. We have a customized package builder link:{gettiny}/custom-builds/[available here] (TinyMCE 4 only) where you can select the core, plugins, skins, themes and compression options you'd like to include in your download.
 
-If you selected the standalone core option in your custom build follow the self-hosted xref:advanced-install.adoc#self-hostedinstall[Self-Hosted Install] install instructions; if you built the jQuery core option follow the xref:jquery.adoc[jQuery] instructions.
+If you selected the standalone core option in your custom build follow the self-hosted xref:installation.adoc#self-hostedinstall[Self-Hosted Install] install instructions; if you built the jQuery core option follow the xref:jquery-pm.adoc[jQuery] instructions.
 
 ____
 Once you have the editor installed, move on to the next step xref:work-with-plugins.adoc[work with plugins], where you'll start customizing {productname}.
