--- a/modules/ROOT/partials/install/upgrading-info.adoc
+++ b/modules/ROOT/partials/install/upgrading-info.adoc
@@ -116,7 +116,7 @@ To simplify the upgrade process to future versions of {productname}:
  ** Set the location of content CSS customizations using xref:content-appearance.adoc#content_css[`content_css`].
  ** Set the location of custom plugins using xref:integration-and-setup.adoc#external_plugins[`external_plugins`].
  ** Set the location of custom icon packages using xref:editor-appearance.adoc#icons_url[`icons_url`] instead of `icons`.
- ** Set the location of custom localization packages using xref:configure-localization.adoc#language_url[`language_url`] instead of `language`.
+ ** Set the location of custom localization packages using xref:content-localization.adoc#language_url[`language_url`] instead of `language`.
  ** Set the location of custom skin packages using xref:editor-appearance.adoc#skin_url[`skin_url`] instead of `skin`.
  ** Set the location of custom themes using xref:editor-appearance.adoc#theme_url[`theme_url`] instead of `theme`.
 ====
