--- a/modules/ROOT/partials/integrations/blazor-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/blazor-quick-start.adoc
@@ -84,4 +84,4 @@ This will start a local development server, accessible at \http://localhost:5000
 For information on customizing the integration, see:
 
 * xref:basic-setup.adoc[{productname} basic setup].
-* xref:blazor.adoc#tinymceblazorintegrationtechnicalreference[The {productname} Blazor integration technical reference].
+* xref:blazor-pm.adoc#tinymceblazorintegrationtechnicalreference[The {productname} Blazor integration technical reference].
