--- a/modules/ROOT/partials/integrations/react-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/react-quick-start.adoc
@@ -13,8 +13,8 @@ This procedure requires:
 * Access to `tinymce.min.js` on either:
  ** xref:editor-and-features.adoc[{cloudname}].
  ** {productname} Self-hosted. See:
-  *** xref:advanced-install.adoc#packagemanagerinstalloptions[Installing {productname} - Package Managers].
-  *** xref:advanced-install.adoc#self-hostedinstall[Installing {productname} - Self-Hosted Download / Install].
+  *** xref:installation.adoc#packagemanagerinstalloptions[Installing {productname} - Package Managers].
+  *** xref:installation.adoc#self-hostedinstall[Installing {productname} - Self-Hosted Download / Install].
 
 === Procedure
 
@@ -136,7 +136,7 @@ and referenced using the URL `%PUBLIC_URL%/tinymce/tinymce.min.js`, such as:
 <script src="%PUBLIC_URL%/tinymce/tinymce.min.js"></script>
 ----
 +
-For information on self-hosting {productname}, see: xref:advanced-install.adoc[Installing {productname}].
+For information on self-hosting {productname}, see: xref:installation.adoc[Installing {productname}].
 
 *** *Bundling {productname} with the React application using a module loader*
 +
