--- a/modules/ROOT/partials/integrations/vue-tech-ref.adoc
+++ b/modules/ROOT/partials/integrations/vue-tech-ref.adoc
@@ -252,7 +252,7 @@ For information on inline mode, see: xref:editor-appearance.adoc#inline[User int
 
 Sets the trigger events for xref:forminputbindingsv-model[v-model events].
 
-For a list of available {productname} events, see: xref:advanced-events.adoc#editorcoreevents[Available Events - Editor events].
+For a list of available {productname} events, see: xref:events.adoc#editorcoreevents[Available Events - Editor events].
 
 *Default value:* `"change keyup undo redo"`.
 
