--- a/modules/ROOT/partials/misc/available-context-menu-sections.adoc
+++ b/modules/ROOT/partials/misc/available-context-menu-sections.adoc
@@ -20,7 +20,7 @@ The identifier below will add a context menu _section_ containing one or more it
 | Adds the _Image..._ item for opening the *Insert/Edit Image* dialog.
 
 | imagetools
-| xref:imagetools.adoc[Image Tools]
+| xref:editimage.adoc[Image Tools]
 | Adds the _Edit image_ item for opening the *Edit Image* dialog.
 
 | link
@@ -28,7 +28,7 @@ The identifier below will add a context menu _section_ containing one or more it
 | Adds the _Link..._ item for opening the *Insert/Edit Link* dialog.
 
 | linkchecker
-| xref:premium-linkchecker.adoc[Link Checker]
+| xref:linkchecker.adoc[Link Checker]
 | Adds the _Ignore_ item on links marked as broken, allowing the user to instruct linkchecker to ignore the link.
 
 | lists
@@ -36,7 +36,7 @@ The identifier below will add a context menu _section_ containing one or more it
 | Adds the _List properties..._ item for opening the *List Properties* dialog.
 
 | configurepermanentpen
-| xref:premium-permanentpen.adoc[Permanent Pen]
+| xref:permanentpen.adoc[Permanent Pen]
 | Adds the _Permanent pen properties..._ item for opening the *Permanent Pen Properties* dialog when the permanent pen is in use.
 
 | spellchecker
