--- a/modules/ROOT/partials/misc/differs_for_mobile.adoc
+++ b/modules/ROOT/partials/misc/differs_for_mobile.adoc
@@ -1,1 +1,1 @@
-NOTE: The default option for this setting is different for mobile devices. For information on the default mobile setting, see: xref:mobile.adoc#mobiledefaultsforselectedsettings[TinyMCE Mobile - Configuration settings with mobile defaults].
+NOTE: The default option for this setting is different for mobile devices. For information on the default mobile setting, see: xref:tinymce-for-mobile.adoc#mobiledefaultsforselectedsettings[TinyMCE Mobile - Configuration settings with mobile defaults].
