--- a/modules/ROOT/partials/misc/mobile_platform_compatibility.adoc
+++ b/modules/ROOT/partials/misc/mobile_platform_compatibility.adoc
@@ -1,6 +1,6 @@
 == Supported Mobile Platforms
 
-xref:mobile.adoc[{productname} mobile] is available in {productname} versions 4.7+ and 5.
+xref:tinymce-for-mobile.adoc[{productname} mobile] is available in {productname} versions 4.7+ and 5.
 
 {productname} mobile is designed to run on iOS Safari and Android Chrome. {productname} mobile is tested on the following platforms:
 
