--- a/modules/ROOT/partials/misc/plugin_support_table.adoc
+++ b/modules/ROOT/partials/misc/plugin_support_table.adoc
@@ -6,23 +6,23 @@ The following table lists the premium plugins supported by {companynameformal} a
 |===
 | Plugin | TinyMCE 4 | TinyMCE 5
 
-| xref:premium-a11ychecker.adoc[Accessibility Checker]
+| xref:a11ychecker.adoc[Accessibility Checker]
 | {tick}
 | {tick}
 
-| xref:premium-advcode.adoc[Advanced Code Editor]
+| xref:advcode.adoc[Advanced Code Editor]
 | {tick}
 | {tick}
 
-| xref:premium-advtable.adoc[Advanced Tables]
+| xref:advtable.adoc[Advanced Tables]
 | {cross}
 | Version *5.1.2* and higher
 
-| xref:premium-casechange.adoc[Case Change]
+| xref:casechange.adoc[Case Change]
 | {cross}
 | {tick}
 
-| xref:premium-checklist.adoc[Checklist]
+| xref:checklist.adoc[Checklist]
 | {cross}
 | {tick}
 
@@ -30,39 +30,39 @@ The following table lists the premium plugins supported by {companynameformal} a
 | {tick}
 | {tick}
 
-| xref:premium-mediaembed.adoc[Enhanced Media Embed]
+| xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 | {tick}
 | {tick}
 
-| xref:premium-export.adoc[Export]
+| xref:export.adoc[Export]
 | {cross}
 | Version *5.5.0* and higher
 
-| xref:premium-formatpainter.adoc[Format Painter]
+| xref:formatpainter.adoc[Format Painter]
 | {tick}
 | {tick}
 
-| xref:premium-linkchecker.adoc[Link Checker]
+| xref:linkchecker.adoc[Link Checker]
 | {tick}
 | {tick}
 
-| xref:premium-mentions.adoc[AtMentions]
+| xref:mentions.adoc[AtMentions]
 | {tick}
 | {tick}
 
-| xref:premium-moxiemanager.adoc[MoxieManager]
+| xref:moxiemanager.adoc[MoxieManager]
 | {tick}
 | {tick}
 
-| xref:premium-pageembed.adoc[Page Embed]
+| xref:pageembed.adoc[Page Embed]
 | {cross}
 | {tick}
 
-| xref:premium-permanentpen.adoc[Permanent Pen]
+| xref:permanentpen.adoc[Permanent Pen]
 | {cross}
 | {tick}
 
-| xref:premium-powerpaste.adoc[PowerPaste]
+| xref:introduction-to-powerpaste.adoc[PowerPaste]
 | {tick}
 | {tick}
 
@@ -70,11 +70,11 @@ The following table lists the premium plugins supported by {companynameformal} a
 | {cross}
 | Version *5.9.2* and higher
 
-| xref:premium-tinymcespellchecker.adoc[Spell Checker Pro]
+| xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro]
 | {tick}
 | {tick}
 
-| xref:premium-skins-and-icon-packs.adoc[{prem_skins_icons}]
+| xref:enhanced-skins-and-icon-packs.adoc[{prem_skins_icons}]
 | {cross}
 | {tick}
 |===
