--- a/modules/ROOT/partials/misc/quickstart-next-steps.adoc
+++ b/modules/ROOT/partials/misc/quickstart-next-steps.adoc
@@ -9,4 +9,4 @@ For information on:
  ** xref:use-tinymce-distraction-free.adoc[{productname} distraction-free editing mode].
 * Adding {productname} plugins, see: xref:work-with-plugins.adoc[Work with plugins to extend TinyMCE].
 * Localizing the {productname} editor, see: xref:localize-your-language.adoc[Localize {productname}].
-* For information on the CSS required to render some {productname} elements outside of the editor, see: xref:boilerplate-content-css.adoc[Boilerplate content CSS].
+* For information on the CSS required to render some {productname} elements outside of the editor, see: xref:editor-content-css.adoc[Boilerplate content CSS].
