--- a/modules/ROOT/partials/release-notes/51known-issues.adoc
+++ b/modules/ROOT/partials/release-notes/51known-issues.adoc
@@ -22,7 +22,7 @@ This section describes issues that users of {productname} 5.1 may encounter, as 
 ====
 This issue affects the following plugins:
 
-* xref:premium-mentions.adoc[Mentions].
+* xref:mentions.adoc[Mentions].
 * xref:emoticons.adoc[Emoticons].
 * xref:charmap.adoc[Character Map].
 ====
