--- a/modules/ROOT/partials/configuration/insert_toolbar.adoc
+++ b/modules/ROOT/partials/configuration/insert_toolbar.adoc
@@ -1,7 +1,7 @@
 [[quickbars_insert_toolbar]]
 === `quickbars_insert_toolbar`
 
-The *quickbars_insert_toolbar* option configures the Quick Insert toolbar provided by the xref:quickbars.adoc[quickbars plugin]. To change the buttons on the Quick Insert toolbar, provide a space-separated string of xref:available-toolbar-buttons.adoc[toolbar button names]. The Quick Insert toolbar is intended for buttons related to inserting content, but any xref:available-toolbar-buttons.adoc[{productname} toolbar buttons] or xref:toolbarbuttons.adoc[custom toolbar buttons] are allowed.
+The *quickbars_insert_toolbar* option configures the Quick Insert toolbar provided by the xref:quickbars.adoc[quickbars plugin]. To change the buttons on the Quick Insert toolbar, provide a space-separated string of xref:available-toolbar-buttons.adoc[toolbar button names]. The Quick Insert toolbar is intended for buttons related to inserting content, but any xref:available-toolbar-buttons.adoc[{productname} toolbar buttons] or xref:custom-toolbarbuttons.adoc[custom toolbar buttons] are allowed.
 
 To disable the Quick Insert toolbar, set `quickbars_insert_toolbar` to `false`.
 
