--- a/modules/ROOT/partials/module-loading/bundling-next-steps.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-next-steps.adoc
@@ -2,11 +2,11 @@
 
 For information on:
 
-* Adding {productname} plugins to the bundle, see: xref:plugins-module-loader.adoc[Bundling {productname} plugins using module loading].
+* Adding {productname} plugins to the bundle, see: xref:bundling-plugins.adoc[Bundling {productname} plugins using module loading].
 * Using editor content CSS provided by {companyname}, including premium CSS included with the {prem_skins_icons}, see: xref:content-css.adoc[Bundling {productname} content CSS using module loading].
 * Creating custom editor content CSS, see: xref:content-appearance.adoc#content_css[Content appearance options - `content_css`].
-* Using {productname} skins provided by {companyname}, including premium skins included with the {prem_skins_icons}, see: xref:skins.adoc[Bundling {productname} skins using module loading].
+* Using {productname} skins provided by {companyname}, including premium skins included with the {prem_skins_icons}, see: xref:bundling-skins.adoc[Bundling {productname} skins using module loading].
 * Creating a custom skin for {productname}, see: xref:creating-a-skin.adoc[Create a skin for {productname}].
-* Using icon packs provided by {companyname}, including premium icons packs included with the {prem_skins_icons}, see: xref:icons.adoc[Bundling {productname} icon packs using module loading].
+* Using icon packs provided by {companyname}, including premium icons packs included with the {prem_skins_icons}, see: xref:bundling-icons.adoc[Bundling {productname} icon packs using module loading].
 * Creating a custom icon pack for {productname}, see: xref:creating-an-icon-pack.adoc[Create an icon pack for {productname}].
-* Localizing the {productname} user interface using a language pack, see: xref:reference-localization.adoc[Bundling the User Interface localizations for {productname}].
+* Localizing the {productname} user interface using a language pack, see: xref:bundling-localization.adoc[Bundling the User Interface localizations for {productname}].
