--- a/modules/ROOT/partials/release-notes/new-features.adoc
+++ b/modules/ROOT/partials/release-notes/new-features.adoc
@@ -2,7 +2,7 @@ The following new features were added to the TinyMCE 5.0 RC version.
 
 === Comments 2.0
 
-The xref:tiny-comments.adoc[Comments 2.0] is a premium plugin built on the xref:annotations.adoc[Annotations API] to create comment threads (conversations). Comments 2.0 provides the ability to start or join a conversation by adding comments to the content within the TinyMCE editor.
+The xref:introduction-to-tiny-comments.adoc[Comments 2.0] is a premium plugin built on the xref:annotations.adoc[Annotations API] to create comment threads (conversations). Comments 2.0 provides the ability to start or join a conversation by adding comments to the content within the TinyMCE editor.
 
 Refer to the xref:comments.adoc[Comments 2.0] documentation, for more information.
 
@@ -38,7 +38,7 @@ This API supports the use of dynamic content for all aspects and is easily confi
 
 The xref:enterprise-formatpainter.adoc[Format Painter] premium plugin allows copying and pasting formatting (such as font style and size) from one location to another. The Format Painter is capable of working with a wide variety of formats and styles such as inline & block formats and table styles.
 
-The Format Painter may be used through keyboard shortcuts or a toolbar button. Refer to the xref:premium-formatpainter.adoc[Format Painter] documentation, for more information.
+The Format Painter may be used through keyboard shortcuts or a toolbar button. Refer to the xref:formatpainter.adoc[Format Painter] documentation, for more information.
 
 === Keyboard navigation and tooltips improvements
 
@@ -50,7 +50,7 @@ A new experimental feature has been added that allows using the tab across all T
 
 The xref:enterprise-mentions.adoc[Mentions] plugin makes it possible for users to send notifications using *@username* in the document.
 
-Mentions is available for download through xref:editor-and-features.adoc[TinyMCE Cloud]. Include the mentions parameter in the tinymce.init script. Refer to the xref:premium-mentions.adoc[Mentions] documentation, for more information on setup and configuration.
+Mentions is available for download through xref:editor-and-features.adoc[TinyMCE Cloud]. Include the mentions parameter in the tinymce.init script. Refer to the xref:mentions.adoc[Mentions] documentation, for more information on setup and configuration.
 
 === Modern codebase
 
@@ -82,7 +82,7 @@ Using the Page Embed feature can enable including content like Google maps or a 
 
 The embedded content is an independent HTML document, referenced in the `src` attribute of each element. Hence it is a fully independent resource, referenced from the current document.
 
-Refer to the xref:premium-pageembed.adoc[Page Embed] documentation, for more information.
+Refer to the xref:pageembed.adoc[Page Embed] documentation, for more information.
 
 === Permanent Pen 1.0
 
@@ -94,7 +94,7 @@ Permanent Pen works in standard text content.
 
 For premium users, the Permanent Pen function is available in the toolbar. Click anywhere in the text field to use the Permanent Pen function.
 
-Refer to the xref:premium-permanentpen.adoc[Permanent Pen] documentation, for more information.
+Refer to the xref:permanentpen.adoc[Permanent Pen] documentation, for more information.
 
 === Tables
 
@@ -113,7 +113,7 @@ TinyMCE 5.0 uses SVG icons for a better crisp look. Buttons are now added via me
 
 To make the creation of custom toolbar buttons easier, new methods were added for split, toggle, and menu toolbar buttons with configuration options specific to the button type.
 
-Refer to the xref:toolbarbuttons.adoc[Toolbar buttons] documentation, for more information.
+Refer to the xref:custom-toolbarbuttons.adoc[Toolbar buttons] documentation, for more information.
 
 === Menu items
 
