--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -397,7 +397,11 @@
 ** xref:tinymce-and-csp.adoc[Content Security Policies (CSP)]
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
-** xref:release-notes.adoc[Release notes for TinyMCE 7]
+** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
+*** TinyMCE 7.0.1
+**** xref:7.0.1-release-notes.adoc#overview[Overview]
+**** xref:7.0.1-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+**** xref:7.0.1-release-notes.adoc#bug-fixes[Bug fixes]
 *** TinyMCE 7.0
 **** xref:7.0-release-notes.adoc#overview[Overview]
 **** xref:7.0-release-notes.adoc#new-premium-plugins[New Premium plugins]
